Added visualization capabilities to the app Updated README with more clear instructions Added LICENSE file

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ langchain
 langchain-groq
 langchain-openai
 langchain_community
+langchain-experimental
 langchain-core
 langgraph
 pydantic
@@ -11,4 +12,6 @@ psycopg2-binary
 pandas
 fastapi
 uvicorn
+matplotlib
+plotly
 
