--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-streamlit
 langchain
 langchain-groq
 langchain-openai
@@ -14,4 +13,5 @@ fastapi
 uvicorn
 matplotlib
 plotly
+sentence-transformers
 
